--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,27 @@ plugins {
     id 'com.gradle.build-scan' version '2.3'
     id 'org.springframework.boot' version '2.1.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
+    id 'checkstyle'
+    id 'pmd'
+    id 'findbugs'
+    id 'jdepend'
 }
 
 repositories {
     mavenCentral()
 }
-    
+
+checkstyle {
+    toolVersion '7.8.1'; 
+}
+findbugs {    
+    ignoreFailures = true
+}
+pmd {    
+    ignoreFailures = true
+}
+
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
