--- a/Jenkinscasc.yml
+++ b/Jenkinscasc.yml
@@ -1,16 +1,16 @@
 plugins:
   required:
-    git: 3.9.3
-    pipeline-model-definition: 1.3.4.1
+    git: 3.9.1
+    pipeline-model-definition: 1.3.2
     pipeline-stage-step: 2.3
-    pipeline-maven: 3.6.7
-    workflow-aggregator: 2.6
-    junit: 1.27
+    pipeline-maven: 3.5.12
+    workflow-aggregator: 2.5
+    junit: 1.25
     blueocean: latest
     job-dsl: latest
-    jobConfigHistory: 2.19
-    gradle: 1.30
-    warnings-ng: 3.0.3
+    jobConfigHistory: latest
+    gradle: latest
+    warnings-ng: latest
   sites:
   - id: "default"
     url: "https://updates.jenkins.io/update-center.json"
@@ -19,19 +19,6 @@ jenkins:
   agentProtocols:
   - "JNLP4-connect"
   - "Ping"
-  securityRealm:
-    local:
-      allowsSignup: false
-      enableCaptcha: false
-      users:
-      - id: adminx
-        password: ${JENKINS_PASS:-passw0rd}
-  authorizationStrategy:
-    globalMatrix:
-      grantedPermissions:
-      - "Overall/Read:anonymous"
-      - "Overall/Read:adminx"
-      - "Overall/Administer:adminx"
   crumbIssuer:
     standard:
       excludeClientIPFromCrumb: false
